kubernetes-projects/amq/dev/amq-service.yaml
apiVersion: v1
kind: Service
namespace: artemis-dev
metadata:
  name: artemis
spec:
  type: LoadBalancer
  ports:
  - name: tcp
    port: 61616
    targetPort: 61616
  selector:
    app: artemis-dev
