kubernetes-projects/amq/dev/amq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artemis-ingress
  namespace: artemis-dev
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: artemis
            port:
              name: tcp
